Bug 113788 - ActiveX controls' text color is not saved back to DOCX file
Summary: ActiveX controls' text color is not saved back to DOCX file
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Bán Róbert
URL:
Whiteboard: target:6.1.0
Keywords: difficultyBeginner, easyHack, filter:docx, skillCpp
Depends on:
Blocks:
 
Reported: 2017-11-12 17:06 UTC by Tamás Zolnai
Modified: 2017-12-30 12:38 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
A document with one check box having red text color (13.38 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2017-11-12 17:07 UTC, Tamás Zolnai
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tamás Zolnai 2017-11-12 17:06:04 UTC
Description:
From version 6.0 LibreOffice can load / save ActiveX controls from / to DOCX format in general. However text color is not saved, while import seems handle text color properly.

Steps to Reproduce:
1. Open attached document with a control having red text color
2. Save it to DOCX in LO
3. Open the saved document in LO or in MSO

Actual Results:  
After saving the document into a DOCX file red text color is missing.

Expected Results:
Red text color should be save to the DOCX file.


Reproducible: Always


User Profile Reset: No



Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 6.3; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/61.0.3163.100 Safari/537.36
Comment 1 Tamás Zolnai 2017-11-12 17:07:31 UTC
Created attachment 137693 [details]
A document with one check box having red text color
Comment 2 Tamás Zolnai 2017-11-12 17:12:22 UTC
Let's turn this into a easy hack. The code is here:
oox/source/ole/axcontrol.cxx
Check AxCheckBoxModel class.
Also might need to check the activex documentation:
https://msdn.microsoft.com/en-us/library/office/cc313125(v=office.12).aspx
Comment 3 Commit Notification 2017-12-30 12:38:01 UTC
Bán Róbert committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=05f72a2a39fccb58f59b99ebfd3e7d0d8ff354e9

tdf#113788 ActiveX controls' text color is not exported to DOCX

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.