tdf#113788 ActiveX controls' text color is not exported to DOCX

The convertFromProperties function does not set the text color.
Background color is a similar property and it is handled similarly.

Change-Id: I2c1bff6198640b9a30f70d9db641425166ced992
Reviewed-on: https://gerrit.libreoffice.org/47185
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Tamás Zolnai <tamas.zolnai@collabora.com>
(cherry picked from commit 05f72a2a39fccb58f59b99ebfd3e7d0d8ff354e9)